fixed title alignment

--- a/src/main/scss/bookshelf.scss
+++ b/src/main/scss/bookshelf.scss
@@ -10,9 +10,22 @@
     display: none;
 }
 
+#row-container .book-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #row-container img {
     padding: 10px;
     width: 180px; 
     height: 270px;
     object-fit: cover;
+}
+
+#row-container p {
+    text-align: center;
+    width: 100%;
+    overflow: hidden;
+    max-width: 170px; // or any specific width you want to set
 }
